chore: prepara configuracoes de producao para vercel e supabase